@@ -1,4 +1,15 @@
-2007-09-03  Matthew Grooms <mgrooms@shrew.net>
+2007-09-12  Matthew Grooms <mgrooms@shrew.net>
+	* src/racoon/cfparse.y
+	src/racoon/cftoken.l
+	src/racoon/handler.c
+	src/racoon/isakmp_quick.c
+	src/racoon/pfkey.c
+	src/racoon/sainfo.c
+	src/racoon/sainfo.h
+	src/racoon/racoon.conf.5 : Implement clientaddr sainfo remote id option
+	and cleanup sainfo syntax in the man page.
+
+2007-09-05  Matthew Grooms <mgrooms@shrew.net>
 	* src/racoon/sainfo.c: Sort sainfos on insert and improve matching logic.
 
 2007-09-03  Matthew Grooms <mgrooms@shrew.net>
